...
                                  ],
                                ),
                                const SizedBox(
                                  height: 5,
                                ),
                                TextFormField(
                                  key: const Key('UsernameField'),
                                  controller: usernameController,
                                  decoration: InputDecoration(
                                    prefixIcon: const Icon(
                                      Icons.person,
                                      color: Color.fromARGB(255, 214, 19, 85),
                                    ),
...
                                  validator: (value) => value == ''
                                      ? 'Please enter your username!'
                                      : null,
                                ),
                                const SizedBox(height: 10),
                                TextFormField(
                                  key: const Key('PasswordField'),
                                  controller: passwordController,
                                  decoration: InputDecoration(
                                    prefixIcon: const Icon(
                                      Icons.lock,
                                      color: Color.fromARGB(255, 214, 19, 85),
                                    ),
...
                                  margin: const EdgeInsets.symmetric(
                                      horizontal: 50),
                                  child: Column(
                                    mainAxisAlignment: MainAxisAlignment.center,
                                    children: [
                                      ElevatedButton(
                                        key: const Key('LoginButton'),
                                        style: ElevatedButton.styleFrom(
                                          backgroundColor: const Color.fromARGB(
                                              255, 214, 19, 85),
                                          padding: const EdgeInsetsDirectional
                                              .symmetric(vertical: 15),
                                          minimumSize:
...
